Implemented DeleteBooks API
